sentry-native/include/sentry.h



/**
 * Sentry levels for events and breadcrumbs.
 */
typedef enum sentry_level_e {
    SENTRY_LEVEL_DEBUG = -1,
    SENTRY_LEVEL_INFO = 0,
    SENTRY_LEVEL_WARNING = 1,
    SENTRY_LEVEL_ERROR = 2,
    SENTRY_LEVEL_FATAL = 3,
} sentry_level_t;

typedef struct sentry_envelope_s sentry_envelope_t;

typedef struct sentry_transport_s sentry_transport_t;


/**
 * Creates a new transport with an initial `send_func`.
 */
SENTRY_API sentry_transport_t *sentry_transport_new(
    void (*send_func)(sentry_envelope_t *envelope, void *state));


/**
 * Sets the transport hook to free the transport `state`.
 */
SENTRY_API void sentry_transport_set_free_func(
    sentry_transport_t *transport, void (*free_func)(void *state));


/**
 * Create a new function transport.
 *
 * It is a convenience function which works with a borrowed `data`, and will
 * automatically free the envelope, so the user provided function does not need
 * to do that.
 *
 * This function is *deprecated* and will be removed in a future version.
 * It is here for backwards compatibility. Users should migrate to the
 * `sentry_transport_new` API.
 */
SENTRY_API sentry_transport_t *sentry_new_function_transport(
    void (*func)(const sentry_envelope_t *envelope, void *data), void *data);


/**
 * Sets the transaction.
 */
SENTRY_API void sentry_set_transaction(const char *transaction);


/**
 * Removes the transaction.
 */
SENTRY_API void sentry_remove_transaction(void);


/**
 * Sets the event level.
 */
SENTRY_API void sentry_set_level(sentry_level_t level);


/**
 * Starts a new session.
 */
SENTRY_API void sentry_start_session(void);


/**
 * Ends a session.
 */
SENTRY_API void sentry_end_session(void);