SentryNative/SentryNative.cs


        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_transaction", ExactSpelling = true)]
        public static extern void sentry_set_transaction([NativeTypeName("const char *")] sbyte* transaction);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_transaction", ExactSpelling = true)]
        public static extern void sentry_remove_transaction();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_level", ExactSpelling = true)]
        public static extern void sentry_set_level([NativeTypeName("sentry_level_t")] sentry_level_e level);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_start_session", ExactSpelling = true)]
        public static extern void sentry_start_session();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_end_session", ExactSpelling = true)]
        public static extern void sentry_end_session();
    }
}
